[package]
name = "dijkstra-adjacency-list"
version = "1.0.0"
edition = "2024"
authors = ["Sebastian De Leon sebastianipl0131@gmail.com"]
description = "Dijkstra algorithm implementation using an adjacency list."
readme = "README.md"
license = "MIT"
keywords = ["dijkstra", "pathfinding", "graph", "shortest-path"]
categories = ["algorithms", "data-structures"]
exclude = ["data/**", "src/main.rs"]

[dependencies]
